--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Click me!!</h1>
+    <h1 class="wow-font">Click me!!</h1>
     <script src="app.js"></script>
 </body>
 
