--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <h1 class="wow-font">Click me!!</h1>
+    <div id="login-form">
+        <input type="text" placeholder="What is your name?">
+        <button>Log In</button>
+    </div>
     <script src="app.js"></script>
 </body>
 
