--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-    <div id="login-form">
-        <input type="text" placeholder="What is your name?">
-        <button>Log In</button>
-    </div>
+    <form id="login-form">
+        <input type="text" maxlength="15" requireds placeholder="What is your name?">
+        <input type="submit" value="Log In">
+    </form>
+    <a href="https://nomadcoders.co">Go to Courses</a>
     <script src="app.js"></script>
 </body>
 
