백틱과 submit 사용

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" maxlength="15" requireds placeholder="What is your name?">
         <input type="submit" value="Log In">
     </form>
-    <a href="https://nomadcoders.co">Go to Courses</a>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
 
