--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form">
         <input type="text" maxlength="15" requireds placeholder="What is your name?">
         <input type="submit" value="Log In">
     </form>
