--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <input type="text" maxlength="15" requireds placeholder="What is your name?">
         <input type="submit" value="Log In">
     </form>
+    <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
