--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
     </form>
     <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+        <span></span>
+        <span></span>
+
+    </div>
+
     <script src="app.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/clock.js"></script>
+    <script src="./js/quotes.js"></script>
+    <script src="./js/background.js"></script>
 </body>
 
 </html>
